Use LauncherWrapper instead of DirectorWrapper to use eclipsemirror defined in tool product specification